Fix menu alignment and adjust about-excerpt.

--- a/assets/stylesheets/_styles.scss
+++ b/assets/stylesheets/_styles.scss
@@ -36,10 +36,6 @@
     color: #828282; //#9e9e9e;
   	padding: 5px 12px;
   	text-decoration: none;
-  	
-  	&:first-child {
-    	padding-left: 0;
-  	}
   }
   
   a:hover,
@@ -60,9 +56,9 @@
 
 .about-excerpt {
   color: #595959;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 400;
-  margin: 70px 0;
+  margin: 70px 15px;
   text-align: center;
 }
 
